--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
     }
 
     .card p {
-      margin-bottom: 15px;
+      margin: 8px 0;
       position: relative;
       z-index: 3;
+      line-height: 1.6;
     }
 
     .btn {
@@ -138,7 +139,9 @@
     <div class="card-container">
       <h2>Web Development Internship</h2>
       <div class="card web">
-        <p>Duration: 1-2 months • Virtual • Start: 05/11/2023</p>
+        <p>Duration: 1-2 months</p>
+        <p>Mode: Virtual</p>
+        <p>Start Date: 05/11/2023</p>
         <a href="https://www.vaultofcodes.in/" target="_blank" class="btn">View Details</a>
         <model-viewer src="images/shooting-gun.glb" autoplay></model-viewer>
       </div>
@@ -148,7 +151,9 @@
     <div class="card-container">
       <h2>App Development Internship</h2>
       <div class="card app">
-        <p>Duration: 1-2 months • Virtual • Start: 05/11/2023</p>
+        <p>Duration: 1-2 months</p>
+        <p>Mode: Virtual</p>
+        <p>Start Date: 05/11/2023</p>
         <a href="https://www.vaultofcodes.in/" target="_blank" class="btn">View Details</a>
         <model-viewer src="images/excited.glb" autoplay></model-viewer>
       </div>
@@ -158,7 +163,9 @@
     <div class="card-container">
       <h2>Python Internship</h2>
       <div class="card python">
-        <p>Duration: 1-2 months • Virtual • Start: 05/11/2023</p>
+        <p>Duration: 1-2 months</p>
+        <p>Mode: Virtual</p>
+        <p>Start Date: 05/11/2023</p>
         <a href="https://www.vaultofcodes.in/" target="_blank" class="btn">View Details</a>
         <model-viewer src="images/happy-gesture.glb" autoplay></model-viewer>
       </div>
@@ -168,7 +175,9 @@
     <div class="card-container">
       <h2>Java Internship</h2>
       <div class="card java">
-        <p>Duration: 1-2 months • Virtual • Start: 05/11/2023</p>
+        <p>Duration: 1-2 months</p>
+        <p>Mode: Virtual</p>
+        <p>Start Date: 05/11/2023</p>
         <a href="https://www.vaultofcodes.in/" target="_blank" class="btn">View Details</a>
         <model-viewer src="images/male-laying.glb" autoplay></model-viewer>
       </div>
